--- a/Modulo01/Ex01/Exercicio001.html
+++ b/Modulo01/Ex01/Exercicio001.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <h1>Ola, Mundo !</h1>
+    <hr>
+    <p>Esse e o meu primeiro documento HTML!
+        Estou muito feliz !
+    </p>
+    
+    <p>
+        Este e um momento unico ! Estou criando um site !
+    </p>
     
 </body>
 </html>
