--- a/Modulo01/Ex002/index.html
+++ b/Modulo01/Ex002/index.html
@@ -11,7 +11,26 @@
     
     <hr>
     <p>Nesta aula vamos aprender um pouco sobre Paragrafos e Quebras de linhas</p>
-    <hr>
+    
+
+    <p>Você pode escrever
+    um paragrafo de qualquer jeito.
+    Basta colocar 
+    tudo no meio do par de tags
+    <br>
+    &lt;p&gt; e &lt;\p&gt; </p>
+
+    <p>
+        Se precisar quebrar 
+        o texto em algum lugar
+        especifíco como este, 
+        você pode usar a tag br. 
+        <br>
+        exemplo :
+        &lt;br&gt;
+
+
+    </p>
 
 </body>
 </html>
