--- a/Modulo01/Ex002/index.html
+++ b/Modulo01/Ex002/index.html
@@ -28,9 +28,25 @@
         <br>
         exemplo :
         &lt;br&gt;
-
-
     </p>
+    <p>
+        Vamos adicionar alguns símbolos especiais:
+        <br>
+        &copy;
+        <br>
+        &trade;
+        <br>
+        &pound;
+        <br>
+        &yen;
+        <br>
+        &delta;
+    </p>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F596;
+        &#X1F913;
+    </p>
+
 
 </body>
 </html>
