--- a/Modulo01/Ex007/index.html
+++ b/Modulo01/Ex007/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: azure;
+        }
+    </style>
 </head>
 <body>
     <h2>Guanabara falando de Semantica</h2>
     <p> e tags que já não funcionam mais.</p>
+    <marquee behavior="" direction="right">??</marquee>
 </body>
 </html>
