--- a/Modulo01/Ex010/index.html
+++ b/Modulo01/Ex010/index.html
@@ -31,5 +31,21 @@
         <li>Arroz</li>
         <li>Feijão</li>
     </ul>
+
+    <h2>Minhas linguagens favoritas</h2>
+    <ol>
+        <li>Antigas</li>
+        <ol type="a">
+        <li>Visual Basic</li>
+        <li>Fortran</li>
+        <li>Delpha</li>    
+    </ol>
+        <li>Novas</li>
+        <ol>
+            <li>PHP</li>
+            <li>Python</li>
+            <li>JavaScript</li>
+        </ol>
+    </ol>
 </body>
 </html>
