links, externos e internos

--- a/Modulo01/Ex011/index.html
+++ b/Modulo01/Ex011/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Links</title>
 </head>
 <body>
-    
+    <h1>Usando Links externos</h1>
+    <p>Você pode acessar o meu repositório público no<a href="https://github.com/Dev-Livia?tab=repositories" target="_blank" rel="external"> github</a></p>
+    <h2>Usando links internos</h2>
+    <p>Está e a primeira pagina do site. Se Você quiser,
+        pode acessar tambem a minha <a href="pag002.html" rel="next">segunda pagina</a>
+    </p>
 </body>
 </html>
