--- a/Modulo01/ExPortifolio/index.html
+++ b/Modulo01/ExPortifolio/index.html
@@ -6,13 +6,25 @@
     <title>Portifólio</title>
     <style>
         body{
-                background-color: azure;
+                background-image: linear-gradient(to right,rgb(75, 75, 167),rgb(107, 107, 168),rgb(75, 75, 167));
+                color: rgb(223, 214, 214);
+            }
+            p{
+                text-align: center;
+                
+            }
+            img{
+                 display: block;
+                 margin: 0 auto;
+            }
+            h1{
+                text-align: center;
             }
     </style>
 </head>
 <body>
     <h1>Portifólio</h1>
-    <img src="" alt="">
+    <img src="img/eu.png" alt="">
     <p>Portfólio de desenvolvimento web com foco em projetos utilizando HTML e CSS.  
         Este espaço tem como objetivo apresentar trabalhos realizados durante a fase de aprendizagem,<br> 
         demonstrações de habilidades técnicas e a evolução contínua no desenvolvimento de interfaces web responsivas e bem estruturadas.</p>
