--- a/Modulo01/Ex013/index.html
+++ b/Modulo01/Ex013/index.html
@@ -9,6 +9,6 @@
     <h1>Inserindo vídeos hospedados localmento</h1>
     <p>Este vídeo está hospedado no meu próprio servidor.</p>
 
-    <video src="midia/12744585_1080_1920_100fps.mp4" width="175" controls></video>
+    <video src="midia/12744585_1080_1920_100fps.mp4" width="175" controls loop></video>
 </body>
 </html>
