--- a/Modulo02/Ex007/Seletor.html
+++ b/Modulo02/Ex007/Seletor.html
@@ -9,15 +9,15 @@
 <body>
     <h1 id = "principal">Criando siter com HTML e CSS</h1>
     <h1>Aprendendo Html basico</h1>
-    <h2>HTML basico</h2>
+    <h2 class ="basico">HTML basico</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
-    <h2>HTML intermediario</h2>
+    <h2 class = "intermediario">HTML intermediario</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
-    <h2>HTML avançado</h2>
+    <h2 class = "avançado">HTML avançado</h2>
    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
@@ -25,14 +25,17 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
-    <h2>CSS basico</h2>
+    <h2 class = "basico">CSS basico</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
-    <h2>CSS intermediario</h2>
+    <h2 class = "intermediario">CSS intermediario</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
     pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
     nobis ducimus numquam ullam asperiores!</p>
-    <h2>CSS avançado</h2>
+    <h2 class = "avançado">CSS avançado</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi delectus veritatis odit,
+    pariatur laboriosam architecto quasi! Aliquid repellendus, nemo eius dolore libero corrupti autem nostrum
+    nobis ducimus numquam ullam asperiores!</p>
 </body>
 </html>
