--- a/Modulo02/Ex011/index.html
+++ b/Modulo02/Ex011/index.html
@@ -20,6 +20,11 @@
             padding: 10px;
             margin: 10px;
         }
+        nav{
+            background-color: rgb(144, 143, 143);
+            padding: 3px;
+            box-shadow: 1px 1px 5px black ;
+        }
         article{
             background-color: lightgrey;
         }
@@ -30,7 +35,10 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 4px;
+            margin: 0px;
+        }
+        footer > p {
             margin: 0px;
         }
     </style>
