--- a/Modulo02/Ex011/index.html
+++ b/Modulo02/Ex011/index.html
@@ -19,6 +19,7 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 20px;
         }
         nav{
             background-color: rgb(144, 143, 143);
