--- a/Modulo03/Ex002/tabela02.html
+++ b/Modulo03/Ex002/tabela02.html
@@ -11,16 +11,23 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
             padding: 10px;
+        }
+        thead > tr > th{
+            position: sticky;
+            top: 0;
+            background-color: gray;
         }
         thead, tfoot{
             background-color: gray;
             color: white;
             
         }
+
     </style>
 </head>
 <body>
@@ -37,6 +44,7 @@
             TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
                 <tr>
                     <th>Estado</th>
@@ -53,6 +61,76 @@
                 <td class="num">21 000 049</td>
             </tr>
             <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr><tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+                </tr>
+               <tr>
+                <td>São Paulo</td>
+                <td class="num">45 919 049</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">21 000 049</td>
+            </tr><tr>
                 <td>São Paulo</td>
                 <td class="num">45 919 049</td>
                 </tr>
