feat: Adicionando botão
Adicionando botão de click para teste

--- a/Modulo03/Ex001/index.html
+++ b/Modulo03/Ex001/index.html
@@ -28,6 +28,7 @@
             <td>B1</td>
             <td>C1</td>
             <td>D1</td>
+            <button>Click aqui</button>
         </tr>
         <tr>
             <td>A2</td>
